--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 asttokens==2.4.1
 decorator==5.1.1
 Django==4.2.8
+django-debug-toolbar==4.3.0
+django-stubs-ext==4.2.7
 executing==2.0.1
 ipython==8.21.0
 jedi==0.19.1
@@ -18,4 +20,7 @@ six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
 traitlets==5.14.1
+types-pytz==2024.1.0.20240203
+types-PyYAML==6.0.12.12
+typing_extensions==4.9.0
 wcwidth==0.2.13
